--- a/src/scss/pages/norfolk.scss
+++ b/src/scss/pages/norfolk.scss
@@ -1,6 +1,7 @@
 .page {
   page-break-after: always;
   position: relative;
+
   .form-img {
     width: 100%;
   }
@@ -16,6 +17,7 @@
   input[type="date"],
   input[type="year"],
   input[type="month"] {
+
     &::-webkit-inner-spin-button,
     &::-webkit-calendar-picker-indicator {
       display: none;
@@ -36,6 +38,7 @@
     width: 100%;
     position: absolute;
   }
+
   .answer input,
   .answer textarea {
     width: 100%;
@@ -56,6 +59,7 @@
     font-family: monospace;
     letter-spacing: 7px;
   }
+
   .answer .check-mark {
     position: absolute;
 
@@ -68,10 +72,12 @@
       position: absolute;
       transform: rotate(45deg);
     }
+
     &::before {
       transform: rotate(-45deg);
     }
   }
+
   textarea.form-control {
     border: 0;
     resize: none;
@@ -88,46 +94,55 @@
       width: 250px;
       top: 0;
     }
+
     .a2 {
       left: 462px;
       width: 80px;
       top: 0;
     }
+
     .a3 {
       left: 642px;
       width: 60px;
       top: 0;
     }
+
     .a4 {
       left: 117px;
       width: 250px;
       top: 32px;
     }
+
     .a5 {
       left: 462px;
       width: 80px;
       top: 32px;
     }
+
     .a6 {
       left: 117px;
       width: 250px;
       top: 63px;
     }
+
     .a7 {
       left: 462px;
       width: 80px;
       top: 63px;
     }
+
     .a8 {
       left: 462px;
       width: 80px;
       top: 93px;
     }
+
     .a9 {
       left: 117px;
       width: 427px;
       top: 124px;
     }
+
     .a10 {
       left: 117px;
       width: 427px;
@@ -139,6 +154,7 @@
     position: absolute;
     top: 321px;
     left: 50px;
+
     input {
       font-size: 12px;
     }
@@ -147,6 +163,7 @@
       left: 5px;
       width: 220px;
       top: 11px;
+
       &.monospace {
         input {
           font-family: monospace;
@@ -154,10 +171,12 @@
         }
       }
     }
+
     .a2 {
       left: 5px;
       width: 353px;
       top: 65px;
+
       &.monospace {
         input {
           font-family: monospace;
@@ -168,7 +187,6 @@
   }
 
 
-
   .signature-info {
     position: absolute;
     top: 838px;
@@ -176,8 +194,26 @@
 
     .a1 {
       left: 308px;
-    width: 85px;
-    top: 13px;
+      width: 85px;
+      top: 13px;
     }
+
+
+
+    .a2 {
+      top: 0;
+      left: 0;
+      width: 300px;
+      height: 30px;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+        object-position: left;
+      }
+
+    }
+
   }
 }
