--- a/src/scss/pages/trevelor-eft-autopay.css
+++ b/src/scss/pages/trevelor-eft-autopay.css
@@ -167,7 +167,12 @@
 }
 .page-details.trevelor-eft-autopay.trevelor-eft .insured-info .a12 {
   left: 5px;
-  width: 25px;
   top: 200px;
   transform: rotate(5deg);
+  height: 25px;
+  width: 150px;
+}
+.page-details.trevelor-eft-autopay.trevelor-eft .insured-info .a12 img {
+  width: auto;
+  height: 100%;
 }/*# sourceMappingURL=trevelor-eft-autopay.css.map */
