--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -4525,6 +4525,16 @@ main .wrapper .admin-section-container .content.login-pannel {
   width: 246px;
   top: 90px;
 }
+.page-details.bristol-eft .payment-details .b6 {
+  left: -80px;
+  top: 137px;
+  height: 25px;
+  width: 150px;
+}
+.page-details.bristol-eft .payment-details .b6 img {
+  width: auto;
+  height: 100%;
+}
 .page-details.bristol-eft .payment-details.payment-details-cards {
   left: 404px;
 }
@@ -5142,10 +5152,24 @@ main .wrapper .admin-section-container .content.login-pannel {
 .page-details.eft-metlife .section-5 .a2 input {
   font-size: 15px;
 }
+.page-details.eft-metlife .section-5 .a3 {
+  left: 190px;
+  top: 0;
+  height: 25px;
+  width: 150px;
+}
+.page-details.eft-metlife .section-5 .a3 img {
+  width: auto;
+  height: 100%;
+}
 
 .page {
   page-break-after: always;
   position: relative;
+}
+
+.form-img {
+  width: 100%;
 }
 
 .page-details.safec-eft {
@@ -5183,6 +5207,7 @@ main .wrapper .admin-section-container .content.login-pannel {
   position: absolute;
   background: transparent;
   overflow: hidden;
+  border: 0;
 }
 .page-details.safec-eft .answer textarea {
   font-size: 10px;
@@ -5239,6 +5264,11 @@ main .wrapper .admin-section-container .content.login-pannel {
   width: 202px;
   top: 44px;
 }
+.page-details.safec-eft .holder-info .a4 {
+  left: 56px;
+  width: 30px;
+  top: 44px;
+}
 .page-details.safec-eft .signature-info {
   position: absolute;
   top: 732px;
@@ -5270,9 +5300,14 @@ main .wrapper .admin-section-container .content.login-pannel {
 }
 .page-details.safec-eft .signature-info .a4 {
   left: 86px;
-  width: 122px;
   top: 28px;
   transform: rotate(2deg);
+  height: 25px;
+  width: 150px;
+}
+.page-details.safec-eft .signature-info .a4 img {
+  width: auto;
+  height: 100%;
 }
 .page-details.safec-eft .exlusion-info {
   position: absolute;
@@ -5307,6 +5342,10 @@ main .wrapper .admin-section-container .content.login-pannel {
   position: relative;
 }
 
+.form-img {
+  width: 100%;
+}
+
 .page-details.trevelor-eft-autopay {
   position: absolute;
   top: 0;
@@ -5321,9 +5360,6 @@ main .wrapper .admin-section-container .content.login-pannel {
 .page-details.trevelor-eft-autopay input[type=month]::-webkit-calendar-picker-indicator {
   display: none;
   -webkit-appearance: none;
-}
-.page-details.trevelor-eft-autopay .form-img {
-  width: 100%;
 }
 .page-details.trevelor-eft-autopay .answer {
   position: absolute;
@@ -5342,6 +5378,7 @@ main .wrapper .admin-section-container .content.login-pannel {
   position: absolute;
   background: transparent;
   overflow: hidden;
+  border: 0;
 }
 .page-details.trevelor-eft-autopay .answer textarea {
   font-size: 10px;
@@ -5469,9 +5506,14 @@ main .wrapper .admin-section-container .content.login-pannel {
 }
 .page-details.trevelor-eft-autopay.trevelor-eft .insured-info .a12 {
   left: 5px;
-  width: 25px;
   top: 200px;
   transform: rotate(5deg);
+  height: 25px;
+  width: 150px;
+}
+.page-details.trevelor-eft-autopay.trevelor-eft .insured-info .a12 img {
+  width: auto;
+  height: 100%;
 }
 
 .page {
@@ -5515,6 +5557,7 @@ main .wrapper .admin-section-container .content.login-pannel {
   position: absolute;
   background: transparent;
   overflow: hidden;
+  border: 0;
 }
 .page-details.safety-eft-form .answer textarea {
   font-size: 10px;
@@ -5656,10 +5699,21 @@ main .wrapper .admin-section-container .content.login-pannel {
   top: 40px;
 }
 .page-details.safety-eft-form .signature-info .a2 {
-  left: 170px;
-  width: 169px;
-  top: 20px;
+  left: 180px;
+  width: 40px;
+  top: 30px;
   transform: rotate(2deg);
+}
+.page-details.safety-eft-form .signature-info .a2.signature {
+  left: 180px;
+  top: 30px;
+  transform: rotate(2deg);
+  height: 25px;
+  width: 150px;
+}
+.page-details.safety-eft-form .signature-info .a2.signature img {
+  width: auto;
+  height: 100%;
 }
 .page-details.safety-eft-form .financial-info {
   position: absolute;
@@ -5874,10 +5928,15 @@ main .wrapper .admin-section-container .content.login-pannel {
   top: 67px;
 }
 .page-details.arbella-eft .signature-info .a3 {
-  left: 184px;
-  width: 119px;
-  top: 119px;
+  left: 334px;
+  top: 38px;
   transform: rotate(6deg);
+  height: 25px;
+  width: 150px;
+}
+.page-details.arbella-eft .signature-info .a3 img {
+  width: auto;
+  height: 100%;
 }
 .page-details.arbella-eft.arbella-excluison .operator-info {
   position: absolute;
@@ -7455,6 +7514,20 @@ main .wrapper .admin-section-container .content.login-pannel {
   width: 85px;
   top: 13px;
 }
+.page-details.norfolk .signature-info .a2 {
+  top: 0;
+  left: 0;
+  width: 300px;
+  height: 30px;
+}
+.page-details.norfolk .signature-info .a2 img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+  -o-object-position: left;
+     object-position: left;
+}
 
 .page {
   page-break-after: always;
@@ -8737,6 +8810,11 @@ main .wrapper .admin-section-container .content.login-pannel {
 .page-details.amica-eft .signature-info .a2 {
   left: 661px;
   width: 99px;
+  top: 67px;
+}
+.page-details.amica-eft .signature-info .a2 {
+  left: 661px;
+  width: 30px;
   top: 67px;
 }
 .page-details.amica-eft.arbella-excluison .operator-info {
