--- a/src/scss/pages/norfolk.css
+++ b/src/scss/pages/norfolk.css
@@ -159,4 +159,18 @@
   left: 308px;
   width: 85px;
   top: 13px;
+}
+.page-details.norfolk .signature-info .a2 {
+  top: 0;
+  left: 0;
+  width: 300px;
+  height: 30px;
+}
+.page-details.norfolk .signature-info .a2 img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+  -o-object-position: left;
+     object-position: left;
 }/*# sourceMappingURL=norfolk.css.map */
