--- a/src/scss/pages/safec-eft.css
+++ b/src/scss/pages/safec-eft.css
@@ -135,9 +135,14 @@
 }
 .page-details.safec-eft .signature-info .a4 {
   left: 86px;
-  width: 122px;
   top: 28px;
   transform: rotate(2deg);
+  height: 25px;
+  width: 150px;
+}
+.page-details.safec-eft .signature-info .a4 img {
+  width: auto;
+  height: 100%;
 }
 .page-details.safec-eft .exlusion-info {
   position: absolute;
