--- a/src/scss/pages/safec-eft.scss
+++ b/src/scss/pages/safec-eft.scss
@@ -160,9 +160,15 @@
 
     .a4 {
       left: 86px;
-      width: 122px;
       top: 28px;
       transform: rotate(2deg);
+      
+      height: 25px;
+      width: 150px;
+      img{
+        width: auto;
+        height: 100%;
+      }
     }
   }
 
